--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -146,7 +146,17 @@ header a.navbar-brand {
 #div_resumePluginList,
 #div_resumeObjectList {
   width: 100% !important;
-  height: calc(100% - 5px) !important;
+  height: calc(100% - 10px) !important;
+}
+#div_mainContainer {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-width: thin;
+  height: 100% !important;
+}
+#div_pageContainer > div.row.row-overflow {
+  margin-left: -20px;
+  margin-right: -30px;
 }
 
 #categoryfilter i {
@@ -895,6 +905,13 @@ select.selectCmd {
 }
 
 /* object/scenario/interact/plugin pages */
+#scenarioThumbnailDisplay,
+#div_displayViewContainer,
+#timelineContainer,
+#interactThumbnailDisplay,
+#div_widgetsList {
+  overflow: unset !important;
+}
 #div_functionalityPanel label > span.label {
   display: inline-block;
 }
