--- a/core/template/scenario/scenario.default.html
+++ b/core/template/scenario/scenario.default.html
@@ -8,7 +8,7 @@
     <option value="stop">{{Arrêter}}</option>
     <option value="activate">{{Activer}}</option>
     <option value="deactivate">{{Désactiver}}</option>
-    <option value="resetRepeatIfStatus">{{Remise à zero des SI}}</option>
+    <option value="resetRepeatIfStatus">{{Remise à zéro des SI}}</option>
   </select>
 </div>
 <div class="input-group input-group-sm" style="width: 100%">
