--- a/desktop/css/report.css
+++ b/desktop/css/report.css
@@ -238,6 +238,7 @@ legend {
 
 .reportModeVisible {
   color: white;
+  display: initial !important;
 }
 
 .timeCmd.label {
@@ -530,6 +531,10 @@ div[class*="DisplayCard"] .name > .label {
   color: rgb(254, 254, 254);
   font-size: 14px !important;
 }
+.eqLogic.eqLogic-widget .widget-name span.reportModeVisible {
+  font-size: 16px !important;
+}
+
 .scenarioDisplayCard > span > i {
   font-size: 3em !important;
 }
@@ -678,7 +683,7 @@ pre {
 }
 
 .div_viewZone{
-  background-color: rgba(249, 249, 250, 1) !important;
+  background-color: rgb(232, 232, 234) !important;
 }
 
 .view-link-widget,
@@ -2314,9 +2319,6 @@ div.cmd-widget[data-subtype="select"]::after {
   font-size: 14px;
   top: 5px!important;
   right: 5px;
-}
-div.eqLogic_layout_table table.tableCmd {
-  min-width: 100%;
 }
 div.eqLogic_layout_table table.tableCmd td {
   vertical-align: top;
