--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -678,6 +678,7 @@ Theme Core 2021 @Jeedom
     font-size: 16px;
     font-weight: 300;
     max-width: 195px;
+    width: -webkit-fill-available;
     max-height: 30px !important;
     overflow: hidden;
     display: inline-block;
