--- a/core/template/scenario/scenario.default.html
+++ b/core/template/scenario/scenario.default.html
@@ -24,10 +24,69 @@
       $('#div_alert').showAlert({message: error.message, level: 'danger'});
     },
     success: function (scenarios) {
+      //set back to Group/Object/Name order
+
+      var allScenarios = []
+      var scenarioGroups = []
+
+      if (scenarios.length > 0) {
+        var noneString = '{{Aucun}}'
+
+        //get right name [Group][Object][Name] and store group names
+        for (var i in scenarios) {
+          var group = scenarios[i].group
+          if (group == "") group = noneString
+          if (scenarios[i].object_id == null) {
+            var objectName = noneString
+          } else {
+            var splitter = scenarios[i].humanName.split('][')
+            var objectName = splitter[0].replace("[", '')
+          }
+          scenarioGroups.push(group[0].toUpperCase() + group.slice(1))
+          scenarios[i].listName = "["+group+"]["+objectName+"]["+scenarios[i].name+"]"
+        }
+
+        //sort group names, with none first:
+        scenarioGroups = Array.from(new Set(scenarioGroups))
+        scenarioGroups.sort()
+        var first = scenarioGroups[scenarioGroups.indexOf(noneString)]
+        if (first) {
+          scenarioGroups.splice(scenarioGroups.indexOf(noneString), 1)
+          scenarioGroups.unshift(first)
+        }
+
+        //put them back in their group:
+        var scenarioList = []
+        for(var i=0; i<scenarioGroups.length; i++) {
+          group = scenarioGroups[i]
+          scenarioList[group] = []
+          var sc, scGroup
+          for (var j=0; j<scenarios.length; j++) {
+            sc = scenarios[j]
+            scGroup = sc.group
+            if (scGroup == null) continue
+            if (scGroup == "") scGroup = noneString
+            if (scGroup.toLowerCase() != group.toLowerCase()) continue
+            scenarioList[group].push([sc.listName, sc.id])
+          }
+        }
+
+        //order all that!
+        for (var group in scenarioList) {
+          var groupScenarios = scenarioList[group]
+          for (var index in groupScenarios) {
+            var sc = groupScenarios[index]
+            var sclistName = sc[0]
+            var scId = sc[1]
+            allScenarios.push({id:scId, 'listName':sclistName})
+          }
+        }
+      }
+
       var options = '';
       options += '<option value="-1">{{Aucun}}</option>';
-      for (var i in scenarios) {
-        options += '<option value="' + scenarios[i].id + '">' + scenarios[i].humanName + '</option>';
+      for (var i in allScenarios) {
+        options += '<option value="' + allScenarios[i].id + '">' + allScenarios[i].listName + '</option>';
       }
       $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=scenario_id]').append(options);
       if ('#scenario_id#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=scenario_id] option[value=#scenario_id#]').html() != undefined) {
