--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -875,26 +875,48 @@ Theme Core 2021 @Jeedom
     font-size: 1.5em;
   }
 
-  #tabicon .iconSelected {
+  #tabicon .iconSelected,
+  #tabimg .iconSelected {
     background-color: #563d7c;
     color: white;
   }
 
-  #tabicon .imgContainer img {
-    max-width: 120px;
-    max-height: 70px;
-    padding: 10px;
+  #tabimg .imgContainer {
+    padding-top: 32px;
+    display:flex;
+    align-items:flex-start;
   }
 
-  #tabicon .divImgSel {
-    min-width: 120px;
-    width: 120px;
-    height: 115px !important;
-    overflow: hidden !important;
-    text-align: center;
+  #tabimg .imgContainer img {
+    width:80px;
+    height:80px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
   }
 
-  #tabicon .iconDesc {
+  #tabimg #div_treeFolder {
+    height:100%;
+    min-width:180px;
+  }
+
+  #tabimg #div_imageGallery {
+    height:100%;
+    margin-left:15px;
+    display:flex;
+    flex-wrap:wrap;
+  }
+
+  #tabimg .divImgSel {
+    height:140px;
+    min-width:120px;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+  }
+
+  #tabicon .iconDesc,
+  #tabimg .iconDesc {
     font-size: 0.8em;
     word-wrap: break-word;
   }
@@ -4213,5 +4235,3 @@ Theme Core 2021 @Jeedom
       width: 14.2%;
     }
   }
-
-
