--- a/core/template/scenario/scenario.default.html
+++ b/core/template/scenario/scenario.default.html
@@ -28,7 +28,7 @@
       var options = '';
       options += '<option value="-1">{{Aucun}}</option>';
       for (var i in scenarios) {
-        options += '<option value="' + scenarios[i].id + '">' + scenarios[i].groupObjectName + '</option>';
+        options += '<option value="' + scenarios[i].id + '">' + scenarios[i].humanName + '</option>';
       }
       $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=scenario_id]').append(options);
       if ('#scenario_id#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=scenario_id] option[value=#scenario_id#]').html() != undefined) {
