--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -877,7 +877,7 @@ Theme Core 2021 @Jeedom
 
   #tabicon .iconSelected,
   #tabimg .iconSelected {
-    background-color: #563d7c;
+    background-color: var(--logo-primary-color);
     color: white;
   }
 
