--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -927,6 +927,7 @@ Theme Core 2021 @Jeedom
     display:flex;
     flex-direction:column;
     align-items:center;
+    justify-content: center;
   }
 
   #tabicon .iconDesc,
