--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -929,7 +929,7 @@ Theme Core 2021 @Jeedom
     display:flex;
     flex-direction:column;
     align-items:center;
-    justify-content: center;
+    justify-content: flex-end;
   }
 
   #tabicon .iconDesc,
