fix no object icon

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -72,6 +72,11 @@ Theme Core 2021 @Jeedom
     background: none
   }
 
+  i.far.blank::before {
+    content: " ";
+    white-space: pre;
+  }
+
 /* ______Main */
   .center {
     text-align: center;
