--- a/core/template/dashboard/cmd.action.slider.sliderVertical.html
+++ b/core/template/dashboard/cmd.action.slider.sliderVertical.html
@@ -16,6 +16,8 @@
         min: ('#minValue#' == '') ? 0 : parseInt('#minValue#'),
         max: ('#maxValue#' == '') ? 100 : parseInt('#maxValue#'),
         value: ('#state#' == '') ? 0 : parseInt(_options.display_value),
+        range: "min",
+        animate: false,
         slide: function(event, ui) {
           $(".value#uid#").show()
           $(".value#uid#").html(ui.value);
