--- a/core/template/mobile/cmd.action.slider.value.html
+++ b/core/template/mobile/cmd.action.slider.value.html
@@ -1,6 +1,6 @@
 <div class="cmd cmd-widget" data-type="action" data-subtype="slider" data-template="value" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
   <div class="slider">
-    <input type="range" min="#minValue#" max="#maxValue#" data-theme="a" value="#state#"/>
+    <input type="range" min="#minValue#" max="#maxValue#" data-theme="a" value="#state#" data-highlight="true"/>
   </div>
   <script>
     $('.cmd[data-cmd_uid=#uid#]').on({
